// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maxAsyncSizeDiff global 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 12211,
              "size": 12801,
            },
            "before": Object {
              "asyncSize": 134,
              "initialSize": 8615,
              "size": 8749,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 456,
                "ok": false,
                "percent": 340.2985074626866,
              },
              "initialSize": Object {
                "absolute": 3596,
                "ok": true,
                "percent": 41.74114915844458,
              },
              "size": Object {
                "absolute": 4052,
                "ok": true,
                "percent": 46.313864441650466,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": 100,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of async assets is 0.45 kb (340.30%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSizeDiff not match - global 1`] = `Array []`;

exports[`maxAsyncSizeDiff not match - override global 1`] = `Array []`;

exports[`maxAsyncSizeDiff override global 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 12211,
              "size": 12801,
            },
            "before": Object {
              "asyncSize": 134,
              "initialSize": 8615,
              "size": 8749,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 456,
                "ok": false,
                "percent": 340.2985074626866,
              },
              "initialSize": Object {
                "absolute": 3596,
                "ok": true,
                "percent": 41.74114915844458,
              },
              "size": Object {
                "absolute": 4052,
                "ok": true,
                "percent": 46.313864441650466,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": 100,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of async assets is 0.45 kb (340.30%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSizeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 1200,
              "initialSize": 29129,
              "size": 30329,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12277,
              "size": 12419,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 1058,
                "ok": false,
                "percent": 745.0704225352113,
              },
              "initialSize": Object {
                "absolute": 16852,
                "ok": true,
                "percent": 137.26480410523743,
              },
              "size": Object {
                "absolute": 17910,
                "ok": true,
                "percent": 144.21451002496175,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": 100,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of async assets is 1.03 kb (745.07%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialSizeDiff global 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 1887,
              "size": 1887,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 449,
              "size": 449,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 1438,
                "ok": false,
                "percent": 320.26726057906455,
              },
              "size": Object {
                "absolute": 1438,
                "ok": true,
                "percent": 320.26726057906455,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of initial assets is 1.40 kb (320.27%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 12211,
              "size": 12801,
            },
            "before": Object {
              "asyncSize": 134,
              "initialSize": 8615,
              "size": 8749,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 456,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "initialSize": Object {
                "absolute": 3596,
                "ok": false,
                "percent": 41.74114915844458,
              },
              "size": Object {
                "absolute": 4052,
                "ok": true,
                "percent": 46.313864441650466,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of initial assets is 3.51 kb (41.74%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialSizeDiff not match - global 1`] = `Array []`;

exports[`maxInitialSizeDiff not match - override global 1`] = `Array []`;

exports[`maxInitialSizeDiff override global 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 1887,
              "size": 1887,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 449,
              "size": 449,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 1438,
                "ok": false,
                "percent": 320.26726057906455,
              },
              "size": Object {
                "absolute": 1438,
                "ok": true,
                "percent": 320.26726057906455,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of initial assets is 1.40 kb (320.27%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 12211,
              "size": 12801,
            },
            "before": Object {
              "asyncSize": 134,
              "initialSize": 8615,
              "size": 8749,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 456,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "initialSize": Object {
                "absolute": 3596,
                "ok": false,
                "percent": 41.74114915844458,
              },
              "size": Object {
                "absolute": 4052,
                "ok": true,
                "percent": 46.313864441650466,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of initial assets is 3.51 kb (41.74%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialSizeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 8348,
              "size": 8348,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 799,
              "size": 799,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 7549,
                "ok": false,
                "percent": 944.8060075093867,
              },
              "size": Object {
                "absolute": 7549,
                "ok": true,
                "percent": 944.8060075093867,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of initial assets is 7.37 kb (944.81%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 1200,
              "initialSize": 29129,
              "size": 30329,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12277,
              "size": 12419,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 1058,
                "ok": true,
                "percent": 745.0704225352113,
              },
              "initialSize": Object {
                "absolute": 16852,
                "ok": false,
                "percent": 137.26480410523743,
              },
              "size": Object {
                "absolute": 17910,
                "ok": true,
                "percent": 144.21451002496175,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of initial assets is 16.46 kb (137.26%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSizeDiff global 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 1887,
              "size": 1887,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 449,
              "size": 449,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 1438,
                "ok": true,
                "percent": 320.26726057906455,
              },
              "size": Object {
                "absolute": 1438,
                "ok": false,
                "percent": 320.26726057906455,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of assets is 1.40 kb (320.27%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 12211,
              "size": 12801,
            },
            "before": Object {
              "asyncSize": 134,
              "initialSize": 8615,
              "size": 8749,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 456,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "initialSize": Object {
                "absolute": 3596,
                "ok": true,
                "percent": 41.74114915844458,
              },
              "size": Object {
                "absolute": 4052,
                "ok": false,
                "percent": 46.313864441650466,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of assets is 3.96 kb (46.31%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSizeDiff not match - global 1`] = `Array []`;

exports[`maxSizeDiff not match - override global 1`] = `Array []`;

exports[`maxSizeDiff override global 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 1887,
              "size": 1887,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 449,
              "size": 449,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 1438,
                "ok": true,
                "percent": 320.26726057906455,
              },
              "size": Object {
                "absolute": 1438,
                "ok": false,
                "percent": 320.26726057906455,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of assets is 1.40 kb (320.27%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 12211,
              "size": 12801,
            },
            "before": Object {
              "asyncSize": 134,
              "initialSize": 8615,
              "size": 8749,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 456,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "initialSize": Object {
                "absolute": 3596,
                "ok": true,
                "percent": 41.74114915844458,
              },
              "size": Object {
                "absolute": 4052,
                "ok": false,
                "percent": 46.313864441650466,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of assets is 3.96 kb (46.31%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSizeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 8348,
              "size": 8348,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 799,
              "size": 799,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 7549,
                "ok": true,
                "percent": 944.8060075093867,
              },
              "size": Object {
                "absolute": 7549,
                "ok": false,
                "percent": 944.8060075093867,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of assets is 7.37 kb (944.81%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 1200,
              "initialSize": 29129,
              "size": 30329,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12277,
              "size": 12419,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 1058,
                "ok": true,
                "percent": 745.0704225352113,
              },
              "initialSize": Object {
                "absolute": 16852,
                "ok": true,
                "percent": 137.26480410523743,
              },
              "size": Object {
                "absolute": 17910,
                "ok": false,
                "percent": 144.21451002496175,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of assets is 17.49 kb (144.21%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;
